[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemies/Living tree 2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Living tree.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Living tree 1.5.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Living Tree.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( -22, 34, 22, 34, 9, 17, 9, -11, 22, -16, 8, -25, -8, -25, -22, -18, -10, -12, -10, 17 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( -24, 35, 24, 35, 10, 17, 10, -10, 24, -16, 8, -26, -8, -26, -24, -18, -11, -11, -11, 17 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 275.556, 316.976 )

[node name="Living Tree" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 2147483654
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.176781, 0 )
frames = SubResource( 1 )
frame = 2
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2147483650
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sight" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Sight"]
enabled = true
cast_to = Vector2( 250, 0 )

[node name="Right shot" type="Node2D" parent="."]
position = Vector2( 20, 0 )

[node name="Left shot" type="Node2D" parent="."]
position = Vector2( -20, 0 )

[node name="Detected_zone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detected_zone"]
shape = SubResource( 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
